[gd_scene load_steps=13 format=3 uid="uid://cl34uppi3w5uy"]

[ext_resource type="Script" uid="uid://cvgg7ai18h48f" path="res://Levels/Assets/storm.gd" id="1_g0r6i"]
[ext_resource type="Texture2D" uid="uid://06oquof4vngs" path="res://Materials/Textures/lightning.png" id="2_bv3r6"]
[ext_resource type="AudioStream" uid="uid://bghxvqruqlru0" path="res://Audio/thunder.ogg" id="3_uu8oq"]
[ext_resource type="AudioStream" uid="uid://ctiq3lpqnupnn" path="res://Audio/rain.ogg" id="4_dkrub"]
[ext_resource type="Texture2D" uid="uid://p7iiriht6xtn" path="res://Materials/Textures/rain-png-transparent-9.png" id="5_jcr6p"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_n06eo"]

[sub_resource type="SphereMesh" id="SphereMesh_g0r6i"]
material = SubResource("StandardMaterial3D_n06eo")
radius = 29.639
height = 18.895
radial_segments = 8
rings = 4

[sub_resource type="CylinderShape3D" id="CylinderShape3D_dkrub"]
height = 43.1124
radius = 5.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_p0r8l"]
emission_shape_offset = Vector3(0, 150, 0)
emission_shape = 6
emission_ring_axis = Vector3(0, 1, 0)
emission_ring_height = 16.04
emission_ring_radius = 51.49
emission_ring_inner_radius = 0.0
emission_ring_cone_angle = 90.0
direction = Vector3(0, -1, 0)
spread = 13.872
initial_velocity_min = 700.0
initial_velocity_max = 980.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xyu8p"]
transparency = 1
shading_mode = 0
albedo_texture = ExtResource("5_jcr6p")

[sub_resource type="SphereMesh" id="SphereMesh_7xvv3"]
material = SubResource("StandardMaterial3D_xyu8p")
radius = 30.0
height = 100.0
radial_segments = 6
rings = 3

[sub_resource type="CylinderShape3D" id="CylinderShape3D_jcr6p"]
height = 362.349
radius = 101.52

[node name="Storm" type="PathFollow3D"]
v_offset = 150.0
rotation_mode = 1
tilt_enabled = false
script = ExtResource("1_g0r6i")

[node name="Visual" type="Node3D" parent="."]
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="Visual"]
mesh = SubResource("SphereMesh_g0r6i")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Visual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17.6081, 8.02056, -26.5042)
mesh = SubResource("SphereMesh_g0r6i")
skeleton = NodePath("../..")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Visual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 19.4103, 15.2404, 6.36675)
mesh = SubResource("SphereMesh_g0r6i")
skeleton = NodePath("../..")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Visual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -34.3471, 6.31968, 24.8814)
mesh = SubResource("SphereMesh_g0r6i")
skeleton = NodePath("../..")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="Visual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17.8901, -6.69725, 33.7773)
mesh = SubResource("SphereMesh_g0r6i")
skeleton = NodePath("../..")

[node name="MeshInstance3D13" type="MeshInstance3D" parent="Visual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 27.9462, -5.64951, 24.3917)
mesh = SubResource("SphereMesh_g0r6i")
skeleton = NodePath("../..")

[node name="MeshInstance3D14" type="MeshInstance3D" parent="Visual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22.3815, -13.9557, -1.41052)
mesh = SubResource("SphereMesh_g0r6i")
skeleton = NodePath("../..")

[node name="MeshInstance3D6" type="MeshInstance3D" parent="Visual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 23.4337, -4.68292, -21.8647)
mesh = SubResource("SphereMesh_g0r6i")
skeleton = NodePath("../..")

[node name="MeshInstance3D7" type="MeshInstance3D" parent="Visual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 34.1312, 2.18652, 12.8656)
mesh = SubResource("SphereMesh_g0r6i")
skeleton = NodePath("../..")

[node name="MeshInstance3D8" type="MeshInstance3D" parent="Visual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.95722, 2.18652, -25.9978)
mesh = SubResource("SphereMesh_g0r6i")
skeleton = NodePath("../..")

[node name="MeshInstance3D9" type="MeshInstance3D" parent="Visual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.95722, 2.18652, 40.875)
mesh = SubResource("SphereMesh_g0r6i")
skeleton = NodePath("../..")

[node name="MeshInstance3D10" type="MeshInstance3D" parent="Visual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -23.7113, -5.22058, -33.4227)
mesh = SubResource("SphereMesh_g0r6i")
skeleton = NodePath("../..")

[node name="MeshInstance3D11" type="MeshInstance3D" parent="Visual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -33.7559, -0.643215, 1.71283)
mesh = SubResource("SphereMesh_g0r6i")
skeleton = NodePath("../..")

[node name="MeshInstance3D12" type="MeshInstance3D" parent="Visual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -26.4336, -11.1658, 1.74075)
mesh = SubResource("SphereMesh_g0r6i")
skeleton = NodePath("../..")

[node name="GroundCheck" type="RayCast3D" parent="."]
target_position = Vector3(0, -151, 0)

[node name="LightningBump" type="Area3D" parent="GroundCheck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -150, 0)
collision_layer = 2
collision_mask = 8
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="GroundCheck/LightningBump"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 20.5562, 0)
shape = SubResource("CylinderShape3D_dkrub")

[node name="OmniLight3D" type="OmniLight3D" parent="GroundCheck/LightningBump"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.06337, 0)
visible = false
light_color = Color(0.431373, 0.85098, 1, 1)
light_energy = 5.0
omni_range = 7.0

[node name="Lightning" type="Sprite3D" parent="GroundCheck/LightningBump"]
transform = Transform3D(29.52, 0, 0, 0, 29.52, 0, 0, 0, 29.52, 0, 75.4889, 0)
visible = false
offset = Vector2(53.35, 0)
billboard = 2
texture = ExtResource("2_bv3r6")

[node name="Thunder" type="AudioStreamPlayer3D" parent="GroundCheck/LightningBump"]
stream = ExtResource("3_uu8oq")

[node name="Rain" type="AudioStreamPlayer3D" parent="GroundCheck/LightningBump"]
stream = ExtResource("4_dkrub")

[node name="RealRain" type="GPUParticles3D" parent="GroundCheck/LightningBump"]
transform = Transform3D(1, 0, 0, 0, 0.927589, -0.373603, 0, 0.373603, 0.927589, 0, 0, 0)
emitting = false
amount = 30
process_material = SubResource("ParticleProcessMaterial_p0r8l")
draw_pass_1 = SubResource("SphereMesh_7xvv3")

[node name="LightningTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="ActiveTimer" type="Timer" parent="."]
wait_time = 240.0
one_shot = true
autostart = true

[node name="WindZone" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="WindZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -168.492, 0)
shape = SubResource("CylinderShape3D_jcr6p")

[connection signal="body_entered" from="GroundCheck/LightningBump" to="." method="_on_lightning_bump_body_entered"]
[connection signal="timeout" from="LightningTimer" to="." method="_on_lightning_timer_timeout"]
[connection signal="timeout" from="ActiveTimer" to="." method="_on_active_timer_timeout"]
[connection signal="body_entered" from="WindZone" to="." method="_on_wind_zone_body_entered"]
[connection signal="body_exited" from="WindZone" to="." method="_on_wind_zone_body_exited"]
